# writer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CX-2-WRITER-REVIEW.md  RECOUNT-RENAME-PLAN.md
packaging/: clean_host_check.py
src/writer/: __init__.py  auth.py  cli.py  doctor.py  engagement.py  http_api.py  mcp_server.py  schemas.py  scripts.py  storage.py  suite_peer.py  suite_service.py  uoink_client.py  voice_dna.py  writing.py
src/writer/_data/ui/: index.html
src/writer/_data/voice_dna/: VOICE-DNA.md
src/writer/migrations/: 0001_initial.sql  0002_engagement_outbox.sql  0003_engagement_next_attempt.sql
tests/: mcp_stdio_smoke.py  regenerate_suite_integration_v1_fixture.py  test_ci_workflow.py  test_cli.py  test_cm7_parity.py  test_composition.py  test_docs_contracts.py  test_doctor.py  test_engagement_retry.py  test_http_api.py  test_mcp_server.py  test_mcp_stdio.py  test_recount_cosmetic_brand.py  test_repository_boundary.py  test_schemas.py  test_scripts.py  test_source_url_conformance.py  test_storage.py  test_suite_integration.py  test_uoink_client.py  test_voice_dna.py  test_writing.py
tests/fixtures/: cm7-parity-v1.json  uoink-corpus-v1.json  uoink-suite-v1.json
tests/fixtures/suite_integration_v1/: runtime-lease.provenance.json  source-url.provenance.json  writer-provider.json
