[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ryan-writer"
version = "0.1.0.dev0"
description = "Local-first prose and script drafting in the user's voice"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mcp>=1.2"]
mcp = ["mcp>=1.2"]

[project.scripts]
writer = "writer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
writer = [
    "migrations/*.sql",
    "_data/voice_dna/*.md",
    "_data/ui/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
